environments/dev/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: dev
spec:
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 80
